@@ -43,7 +43,7 @@ public class RotateAction extends PhotoManagerAction {
 	public void actionPerformed(final ActionEvent arg0) {
     	for (int i=0; i<a_selection.getSelection().length; i++) {
     	    final float r = ((Float)(a_photoList.getValueAt(a_selection.getSelection()[i],PhotoList.PARAM_ROTATION))).floatValue();
-    	    a_photoList.setValueAt(new Float(r+a_value),
+    	    a_photoList.setValueAt(Float.valueOf(r+a_value),
                                    a_selection.getSelection()[i],
                                    PhotoList.PARAM_ROTATION);
          }
